--- a/oehealth_idn/report/implementasi_keperawatan_report.xml
+++ b/oehealth_idn/report/implementasi_keperawatan_report.xml
@@ -8,6 +8,7 @@
 
                         th, td {
                         padding: 5px;
+                        font-size:10px;
                         }
                         .border{
                             border: 1px solid black;
