--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -99,7 +99,7 @@
     <record id="radiologi_paperformat" model="report.paperformat">
         <field name="name">Radiologi Format</field>
         <field name="default" eval="True" />
-        <field name="format">A6</field>
+        <field name="format">A5</field>
         <field name="page_height">0</field>
         <field name="page_width">0</field>
         <field name="orientation">Portrait</field>
@@ -127,7 +127,7 @@
         <field name="header_line" eval="False" />
         <field name="header_spacing">0</field>
         <field name="dpi">90</field>
-        <field name="report_ids" eval="[(4, ref('oehealth_idn.observasi_terapi_pasien_report_menu'))]" />
+        <field name="report_ids" eval="[(4, ref('oehealth_idn.observasi_terapi_pasien_report_menu')), (4, ref('oehealth_idn.report_rekam_medis_rawatjalan')),]" />
     </record>
 
 </odoo>
